fix for scrollbars at wider widths in .watch-tiny mode

--- a/youtube-theater-mode-4realz.css
+++ b/youtube-theater-mode-4realz.css
@@ -51,4 +51,8 @@ div#page-container {
 	display: none;
 }
 
+.yt-base-gutter {
+	min-width: 0 !important;
+}
+
 }
